...
        view.init()
    }, [])

    return <BlurWrapper
        before={
            <><Screen
                testID={ 'walletsListScreen' }
                backgroundColor={ Colors.bg } statusBarBg={ Colors.bg }
                preset="scroll"
                refreshing={ view.refreshing }
                onRefresh={ view.onRefresh }
                style={ { minHeight: "100%" } }
            >
...
                                      }
                                  }, null, null) }
                                  wallets={ view.allWallets }
                                  totalBalance={ getWalletStore().formatTotalAllWalletsFiatBalance }/>
                }
                { !view.initialized && <LoaderScreen/> }
                <Button testID={ 'createWalletBtn' } margin-16 absB br40
                        label={ t("walletScreen.menuDialog.createWallet.name") }
                        onPress={ view.createWalletDialog }
                />
            </Screen>
            </> }
        after={ <View/> }
...
