...
    "recoverFromMnemonicOne": "Recover",
    "recoverFromMnemonicTwo": "from recovery phrase",
    "walletCreating": "Wallet is being created",
    "walletRecoverTitle": "Enter your recovery phrase",
    "recoveryError": "Invalid recovery phrase"
  },
  "lockerScreen": {
    "incorrectPin": "Invalid PIN",
    "pinFormErrorIncorrectConfirmationMessage": "Incorrect PIN",
    "pinFormErrorIncorrectPinMessage": "Incorrect PIN",
    "pinFormLoginAction": "Enter PIN code",
    "pinFormRegisterAction": "Create PIN code",
    "pinFormConfirmationAction": "Confirm PIN code",
...
