...
                            </Text>
                            <Text text16 marginT-10>{ t("humaniqID.verified.secondLine") }</Text>
                        </>
                    }
                </ScrollView>
                <View marginB-16>
                    { !verified && !getProfileStore().isSuggested && <Button testID={ "skipBtn" }
                                                                             onPress={ onSkip }
                                                                             label={ t("humaniqID.skip") }
                                                                             outline
                                                                             br50
                                                                             robotoM/>
                    }
...
