...
            onRefresh={ view.onRefresh }
            style={ !view.allInitialized ? { height: "100%" } : {} }
        >
            <>
                { view.allInitialized && <>
                    <View paddingT-20 paddingH-16 left row centerV spread>
                        <Button testID={ 'allAddressesOrCreateWalletBtn' } link textM primary
                                label={ getWalletStore().wallets.length > 1 ? t('walletScreen.allAddresses') : t("walletScreen.menuDialog.createWallet.name") }
                                onPress={ () => getWalletStore().wallets.length > 1 ? nav.navigate("walletsList", { animate: true }) : view.createWalletDialog(TOAST_POSITION.UNDER_TAB_BAR) }
                        />
                        <View row right centerV>
                            <HIcon size={ 22 } color={ Colors.textBlack } name={ "preferences" }
                                   style={ { marginRight: 30 } } onPress={ () => nav.navigate("visibility") }/>
...
